--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Pallavi Thorat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1" 
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.2"
   }
 }
