--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Pallavi Thorat",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
