--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "Pallavi Thorat",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "validator": "^13.12.0"
   }
